@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <cw>
-  <version>3.4.0</version>
+  <version>HEAD</version>
   <revision>$Revision$</revision>
 </cw>
