@@ -1,1 +1,2 @@
-compressUrl = true
+compressUrl = false
+urlMaxLength = 2000
